13.may (ws)
      - integration of Aeolus organ software synthesizer
      - extension of playback architecture: its now possible to assign
        midi instruments to individual voices in a staff
      - fix #5744: grace notes do not transpose
      - fix #5732: second note in measure missing accidental
      - fix #5742: 0.9.5 score crashes 0.9.6 RC1
7.may (ws)
      - fix #5683: No cautionary time signatures when changing between
        two different time signatures of the same note value
6.may (ws)
      - cursor up/down moves selected rest one staff line up/down
      - implement playback of mordent
      - apply consistency checks after score is loaded: make sure voice 1
        is continuous and has no gaps
5.may (ws)
      - some effort to support tuplets for capella import
      - merge mreader branch
3.may (ws)
      - read plugins also from local data dir
        on linux: $HOME/.local/share/data/MusE/MuseScore/plugins
      - midi remote control
      - fix #5641, #5644: change pitch of tied notes
